--- a/opentelemetry/opentelemetry-driver/build.gradle
+++ b/opentelemetry/opentelemetry-driver/build.gradle
@@ -32,11 +32,12 @@ artifacts {
 
 jar {
     enabled = false
+    archiveBaseName = 'corda-opentelemetry-driver'
     archiveAppendix = corda_archive_appendix
 }
 
 publish {
     disableDefaultJar = true
-    name addArchiveAppendix('corda-opentelemetry-driver')
+    name jar.archiveBaseName.map { addArchiveAppendix(it) }
 }
 
