--- a/.ci/dev/regression/Jenkinsfile
+++ b/.ci/dev/regression/Jenkinsfile
@@ -256,7 +256,7 @@ pipeline {
             steps {
                 rtServer(
                         id: 'R3-Artifactory',
-                        url: 'https://software.r3.com/artifactory',
+                        url: 'https://download.corda.net/maven',
                         credentialsId: 'artifactory-credentials'
                 )
                 rtGradleDeployer(
